# stam

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
notebooks/: stam_testing_phases.ipynb
stam_optimizer/: __init__.py  optax_transform.py
stam_optimizer/benchmarks/: __init__.py  cifar10_cnn.py  fair_timing.py  mnist_sanity.py  phase1_runner.py  resource_report.py  stress_runner.py  utils.py
stam_optimizer/core/: __init__.py  stam.py  stam_lite.py  state.py
